# parallel_renderer

./: .gitignore  CMakeLists.txt  README.md
results/: medium.csv  results.csv
src/: app.cpp  app.h  app_cli.cpp  benchmark_analysis.cpp  benchmark_analysis.h  benchmark_runner.cpp  benchmark_runner.h  camera.cpp  camera.h  cli.cpp  cli.h  csv_writer.cpp  csv_writer.h  gui_app.cpp  gui_app.h  gui_app_stub.cpp  main.cpp  main_gui.cpp  math.h  png_writer.cpp  png_writer.h  render_core.h  render_engine.cpp  render_engine.h  render_job.cpp  render_job.h  renderer.h  scene.h  scene_registry.cpp  scene_registry.h  sweep_runner.cpp  sweep_runner.h  viewer.cpp  viewer.h  viewer_sdl.cpp  viewer_sdl.h  viewer_state.cpp  viewer_state.h  viewer_terminal.cpp  viewer_terminal.h
tests/: test_renderer.cpp
